# goodtogo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
.beads/: issues.jsonl
.beads/knowledge/: facts.json
.claude/commands/: add-feature.md  agent-handoff.md  announce-pr.md  auto-ram-cleanup.md  autonomous-mode.md  cleanup-autonomous.md  cleanup-files.md  commit-files-individually.md  create-issue.md  create-pr.md  curate-pr-learnings.md  debug-onboarding.md  document-script.md  evaluate-current-branch.md  extract-learnings.md  fix-failing-tests.md  floss-codebase.md  format-code.md  handle-pr-comments.md  list-sessions.md  load-session.md  manage-sessions.md  parallel-linter-fix.md  parallel-type-fix.md  peek-branch.md  posthog-analytics.md  pr-shepherd.md  prime.md  production-mode.md  ram-cleanup.md  reflection.md  release.md  review-design.md  review-pr.md  review-this.md  save-session.md  self-reflect.md  start-task.md  til.md  update-homepage.md  (+3 more)
.claude/guides/: build-validation.md  git-workflow.md  script-development.md  session-management.md  tdd-compact.md  testing-patterns.md  todo-management.md  typescript-patterns.md  worktree-development.md
.claude/plugins/goodtogo/skills/beads/: SKILL.md
.claude/plugins/goodtogo/skills/beads/agents/: code-review-agent.md  customer-service-agent.md  designer-agent.md  knowledge-curator-agent.md  pr-shepherd-agent.md  security-auditor-agent.md  security-design-agent.md  sre-agent.md  swarm-coordinator-agent.md  test-automator-agent.md
.claude/plugins/goodtogo/skills/brainstorming-extension/: SKILL.md
.claude/plugins/goodtogo/skills/create-issue/: SKILL.md
.claude/plugins/goodtogo/skills/design-review-gate/: SKILL.md
.claude/plugins/goodtogo/skills/handling-pr-comments/: SKILL.md
.claude/plugins/goodtogo/skills/posthog-analytics/: SKILL.md
.claude/plugins/goodtogo/skills/pr-shepherd/: SKILL.md
.claude/plugins/goodtomerge/skills/beads/: SKILL.md
.claude/plugins/goodtomerge/skills/beads/agents/: architect-agent.md  code-review-agent.md  coder-agent.md  cto-agent.md  issue-orchestrator.md  metrics-agent.md  pr-shepherd-agent.md  researcher-agent.md  slack-coordinator-agent.md  sre-agent.md  swarm-coordinator-agent.md  test-automator-agent.md
.claude/plugins/goodtomerge/skills/brainstorming-extension/: SKILL.md
.claude/plugins/goodtomerge/skills/design-review-gate/: SKILL.md
.claude/plugins/goodtomerge/skills/posthog-analytics/: SKILL.md
.claude/plugins/goodtomerge/skills/pr-shepherd/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml  gtg-rerun.yml  pr-check.yml  publish.yml  tests.yml
beads/: .gitignore
docs/: AGENT_DATA_NEEDS.md  BEADS_SETUP.md  GITIGNORE_BEST_PRACTICES.md  _config.yml  index.md
docs/plans/: 2026-01-15-goodtomerge-cli-design.md
src/goodtogo/: __init__.py  cli.py  container.py
src/goodtogo/adapters/: __init__.py  agent_state.py  cache_sqlite.py
src/goodtogo/core/: analyzer.py  models.py
src/goodtogo/parsers/: claude.py  coderabbit.py  cursor.py  generic.py  greptile.py  vercel.py
src/goodtomerge/: __init__.py  cli.py  container.py
src/goodtomerge/adapters/: cache_memory.py  cache_sqlite.py  github.py
src/goodtomerge/core/: analyzer.py  interfaces.py
src/goodtomerge/parsers/: claude.py  coderabbit.py  cursor.py  generic.py  greptile.py
tests/: __init__.py  conftest.py
tests/fixtures/comments/: coderabbit.json
tests/fixtures/prs/: action_required.json  ready_to_merge.json
tests/integration/: test_cli.py  test_full_analysis.py
tests/unit/: test_container.py
tests/unit/adapters/: test_agent_state.py  test_cache_memory.py  test_cache_sqlite.py  test_github.py  test_time_provider.py
tests/unit/core/: test_analyzer.py  test_cache_invalidation.py  test_models.py  test_review_timestamps.py
tests/unit/parsers/: test_claude.py  test_coderabbit.py  test_cursor.py  test_generic.py  test_greptile.py  test_vercel.py
tests/unit/security/: test_cache_key_sanitization.py  test_file_permissions.py  test_input_validation.py  test_token_security.py
